<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Projektant</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_view__login">Logowanie</string>
    <string name="login_title">Logowanie</string>
    <string name="login_username">Login</string>
    <string name="login_password">Hasło</string>
    <string name="login_go">Zaloguj</string>
    <string name="login_register">Rejestracja</string>
    <string name="data_file">data.txt</string>
    <string name="title_activity_view__list">Projektant</string>
    <string name="title_activity_activity_register">Rejestracja</string>
    <string name="title_activity_activity_projects">Lista Projektów</string>
    <string name="title_activity_activity_preferences">Ustawienia</string>

</resources>